Kubernetes-Manifests-file copy/Frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: three-tier
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
